fix(popup): font too small on chrome

--- a/src/assets/sanitize.scss
+++ b/src/assets/sanitize.scss
@@ -2,3 +2,8 @@
 @forward 'sanitize.css/forms.css';
 @forward 'sanitize.css/assets.css';
 @forward 'sanitize.css/typography.css';
+
+body {
+  // Fix 75% sizing on chrome
+  font-size: 1rem;
+}
